--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,27 +14,27 @@
             <div class="iconPerfil">
                 <img src="./../../assets/Perfil.svg" alt="">
             </div>
-            <div class="ButtonWord" id="ButtonWord"><a id="LinkPub" class="LinksWord" href="/Profile/{{idUser}}">Perfil</a><a id="LinkPriv" class="LinksWord" href="/admon/{{idUser}}">Perfil</a></div>
+            <div class="ButtonWord" id="ButtonWord"><a id="LinkPub" class="LinksWord" href="/#/Profile/{{idUser}}">Perfil</a><a id="LinkPriv" class="LinksWord" href="/#/admon/{{idUser}}">Perfil</a></div>
         </div>
         <div class="button3-home">
             <div class="iconHome"><img src="./../assets/searchIconNavbar.png" alt=""></div>
-            <div class="ButtonWord" id="ButtonWord"><a class="LinksWord" href="/search">Search</a></div>
+            <div class="ButtonWord" id="ButtonWord"><a class="LinksWord" href="/#/search">Search</a></div>
         </div>
         <div class="button3-home">
             <div class="iconHome"><img src="./../../assets/Home.svg" alt=""></div>
-            <div class="ButtonWord" id="ButtonWord"><a class="LinksWord" href="/Home">Home</a></div>
+            <div class="ButtonWord" id="ButtonWord"><a class="LinksWord" href="/#/Home">Home</a></div>
         </div>
         <div class="button2-meetings" id="button2-meetings">
             <div class="iconMeeting"><img src="./../../assets/Meeting.svg" alt=""></div>
-            <div class="ButtonWord" id="ButtonWord"><a class="LinksWord" href="/Services">Reunion</a></div>
+            <div class="ButtonWord" id="ButtonWord"><a class="LinksWord" href="/#/Services">Reunion</a></div>
         </div>
         <div class="button2-meetings" id="button3-hour">
             <div class="iconMeeting"><img src="./../assets/hourIcon.png" alt=""></div>
-            <div class="ButtonWord" id="ButtonWord"><a class="LinksWord" href="/AdmonTime">Horario</a></div>
+            <div class="ButtonWord" id="ButtonWord"><a class="LinksWord" href="/#/AdmonTime">Horario</a></div>
         </div>
         <div class="button2-meetings" id="button4-calendar">
             <div class="iconMeeting"><img src="./../assets/calendarIcon.png" alt=""></div>
-            <div class="ButtonWord" id="ButtonWord"><a class="LinksWord" href="/calendar">Agenda</a></div>
+            <div class="ButtonWord" id="ButtonWord"><a class="LinksWord" href="/#/calendar">Agenda</a></div>
         </div>
         
     </div>
