--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
     </div>
 </aside>
 <div class="body-home">
-    <a href="/Postview/{{post._id}}" class="ContainerPost" *ngFor="let post of posts">
+    <a href="/#/Postview/{{post._id}}" class="ContainerPost" *ngFor="let post of posts">
         <div>
             <div class="Photo-perfil">
                 <div>
