--- a/src/app/login-register/login-register.component.html
+++ b/src/app/login-register/login-register.component.html
@@ -21,7 +21,7 @@
                 <h2>Iniciar sesión</h2>
                 <input formControlName="email" type="email" placeholder="Correo electronico" required>
                 <input formControlName="password" type="password" placeholder="Contraseña" required>
-                <a href="/Forget-password">¿Olvidaste tu contraseña?</a>
+                <a href="/#/Forget-password">¿Olvidaste tu contraseña?</a>
                 <button [disabled]="!formLogin">Iniciar</button>
             </form>
         </div>
