--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -6,7 +6,7 @@
         </button>
     </form>
     <div class="ResultSearch">
-        <a href="/Profile/{{user._id}}" class="ContainerProfile" id="ContainerProfile"  *ngFor=" let user of users">
+        <a href="/#/Profile/{{user._id}}" class="ContainerProfile" id="ContainerProfile"  *ngFor=" let user of users">
            
                 <img src="http://localhost:3000/public/images/{{user.files_id[0]}}" alt="">
            
