--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -119,7 +119,7 @@
             </div>
         </div>
         <div class="Our-post">
-            <a href="/Postview/{{post._id}}" class="ContainerPost" *ngFor="let post of posts">
+            <a href="/#/Postview/{{post._id}}" class="ContainerPost" *ngFor="let post of posts">
                 <div>
                     <div class="Photo-perfil">
                         <div>
