--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -8,7 +8,7 @@
     <div class="ResultSearch">
         <a href="/#/Profile/{{user._id}}" class="ContainerProfile" id="ContainerProfile"  *ngFor=" let user of users">
            
-                <img src="https://polinet.onrender.com/images/{{user.files_id[0]}}" alt="">
+                <img src=" https://polinet.onrender.com/public/images/{{user.files_id[0]}}" alt="">
            
             <div class="nameProfile">
                 <p class="nameP">{{user.name}}</p>
