--- a/src/app/admin-view/admin-view.component.html
+++ b/src/app/admin-view/admin-view.component.html
@@ -69,7 +69,7 @@
             <i (click)="ModalClose('ModalDeleteUser')" class="material-icons">close</i>
         </div>
         <h2>Detalles</h2>
-        <img src=" https://polinet.onrender.com/public/images/{{userSelected.files_id[0]}}" alt="">
+        <img src="https://polinet.onrender.com/images/{{userSelected.files_id[0]}}" alt="">
         <div class="moreDetails">
             <h3>Usuario: {{userSelected.name}}</h3>
             <p>Rol: {{userSelected.rol}}</p>
