--- a/src/app/post-view/post-view.component.html
+++ b/src/app/post-view/post-view.component.html
@@ -16,7 +16,7 @@
         <div class="body">
             <div  class="Photo-perfil">
                 <div>
-                    <img src=" https://polinet.onrender.com/public/images/{{post.creator_image}}" alt="">
+                    <img src="https://polinet.onrender.com/images/{{post.creator_image}}" alt="">
                 </div>
                 <a href="/#/Profile/{{post.creator_id}}">{{post.creator_name}}</a>
             </div>
@@ -41,7 +41,7 @@
                     <div class="userComment" *ngFor="let comment of BoxComments">
                         <div class="Photo-perfil">
                             <div>
-                                <img src=" https://polinet.onrender.com/public/images/{{comment.image}}" alt="">
+                                <img src="https://polinet.onrender.com/images/{{comment.image}}" alt="">
                             </div>
                             <a href="/#/Profile/{{comment._id}}">{{comment.name}}</a>
                         </div>
