--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -49,7 +49,7 @@
     <section class="photo-description-follow">
         <div class="Information">
             <div class="photo-follow">
-                <img src=" https://polinet.onrender.com/public/images/{{user.files_id[0]}}" alt="">
+                <img src="https://polinet.onrender.com/images/{{user.files_id[0]}}" alt="">
                 <button id="followMeButton" class="followMe" (click)="Follow()">Seguir</button>
             </div>
             <div class="totalInfo">
@@ -80,25 +80,25 @@
         </div>
         <div class="buttons">
             <div class="EnterprisePriv ContentButton2" id="EnterprisePriv">
-                <a class="ButtonBasicA" href=" https://polinet.onrender.com/public/images/{{user.files_id[1]}}"
-                download=" https://polinet.onrender.com/public/images/{{user.files_id[1]}}">Hoja de vida</a>
+                <a class="ButtonBasicA" href="https://polinet.onrender.com/images/{{user.files_id[1]}}"
+                download="https://polinet.onrender.com/images/{{user.files_id[1]}}">Hoja de vida</a>
                 <button class="ButtonBasic" id="editProfile">Editar perfil</button>
                 <button class="ButtonBasic" id="makePost">Crear post</button>
                 <button class="ButtonBasic" id="deletePost" (click)="ModalOpen('modalDeletePost')">Eliminar post</button>
             </div>
             <div class="EnterprisePub ContentButton" id="EnterprisePub">
-                <a class="ButtonBasicA" href=" https://polinet.onrender.com/public/images/{{user.files_id[1]}}"
-                    download=" https://polinet.onrender.com/public/images/{{user.files_id[1]}}">Hoja de vida</a>
+                <a class="ButtonBasicA" href="https://polinet.onrender.com/images/{{user.files_id[1]}}"
+                    download="https://polinet.onrender.com/images/{{user.files_id[1]}}">Hoja de vida</a>
             </div>
             <div class="MentorPriv ContentButton3" id="MentorPriv">
-                <a class="ButtonBasicA" href=" https://polinet.onrender.com/public/images/{{user.files_id[1]}}"
-                    download=" https://polinet.onrender.com/public/images/{{user.files_id[1]}}">Hoja de vida</a>
+                <a class="ButtonBasicA" href="https://polinet.onrender.com/images/{{user.files_id[1]}}"
+                    download="https://polinet.onrender.com/images/{{user.files_id[1]}}">Hoja de vida</a>
                 <button class="ButtonBasic" id="editProfile">Editar perfil</button>
                 <button class="ButtonBasic" (click)="ModalOpen('modalSubEnter')">Agregar empresario</button>
             </div>
             <div class="MentorPub ContentButton" id="MentorPub">
-                <a class="ButtonBasicA" href=" https://polinet.onrender.com/public/images/{{user.files_id[1]}}"
-                    download=" https://polinet.onrender.com/public/images/{{user.files_id[1]}}">Hoja de vida</a>
+                <a class="ButtonBasicA" href="https://polinet.onrender.com/images/{{user.files_id[1]}}"
+                    download="https://polinet.onrender.com/images/{{user.files_id[1]}}">Hoja de vida</a>
             </div>
             <div class="UserRecurrent ContentButton" id="UserRecurrent">
                 <button class="ButtonBasic" id="editProfile">Editar perfil</button>
@@ -123,13 +123,13 @@
                 <div>
                     <div class="Photo-perfil">
                         <div>
-                            <img src=" https://polinet.onrender.com/public/images/{{user.files_id[0]}}" alt="">
+                            <img src="https://polinet.onrender.com/images/{{user.files_id[0]}}" alt="">
                         </div>
                         <h3>{{post.creator_name}}</h3>
                     </div>
                 </div>
                 <div class="img-post">
-                    <img id="ImagenLoad" src=" https://polinet.onrender.com/public/images/{{post.image}}" alt="">
+                    <img id="ImagenLoad" src="https://polinet.onrender.com/images/{{post.image}}" alt="">
                 </div>
                 <div class="description-post">
                     <h2>{{post.title}}</h2>
