--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,13 +14,13 @@
         <div>
             <div class="Photo-perfil">
                 <div>
-                    <img src="https://polinet.onrender.com/images/{{post.creator_image}}" loading="lazy" alt="">
+                    <img src="https://polinet.onrender.com/public/images/{{post.creator_image}}" loading="lazy" alt="">
                 </div>
                 <h3>{{post.creator_name}}</h3>
             </div>
         </div>
         <div class="img-post">
-            <img id="ImagenLoad" src="https://polinet.onrender.com/images/{{post.image}}" alt="">
+            <img id="ImagenLoad" src="https://polinet.onrender.com/public/images/{{post.image}}" alt="">
         </div>
         <div class="description-post">
             <h2>{{post.title}}</h2>
