--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="button3-home">
             <div class="iconHome"><img src="./../assets/searchIconNavbar.png" alt=""></div>
-            <div class="ButtonWord" id="ButtonWord"><a class="LinksWord" href="/#/search">Search</a></div>
+            <div class="ButtonWord" id="ButtonWord"><a class="LinksWord" href="/#/search">Busqueda</a></div>
         </div>
         <div class="button3-home">
             <div class="iconHome"><img src="./../../assets/Home.svg" alt=""></div>
