--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="follows-List">
         <ol>
-            <li *ngFor=" let follow of follows"><a href="/Profile/{{follow._id}}">{{follow.name}}</a></li>
+            <li *ngFor=" let follow of follows"><a href="https://polinet.vercel.app/#/Profile/{{follow._id}}">{{follow.name}}</a></li>
         </ol>
     </div>
 </aside>
