fix bug environment

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
         <div class="button4-configs">
             <div class="iconConfig"><img src="./../assets/UserIcon.png " alt=""></div>
             <div class="ButtonWord" id="ButtonWord">
-                <a id="Log-in" class="ButtonLog-in LinksWord" href="./Login">Iniciar Sesión</a>
+                <a id="Log-in" class="ButtonLog-in LinksWord" href="/#/Login">Iniciar Sesión</a>
                 <a id="Sign-out" class="ButtonClose LinksWord">Cerrar sesión</a>
             </div>
         </div>
