--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,7 +23,7 @@
     top: 0;
     border-right:5px solid var(--c2);
     background-color: var(--sw);
-    
+    display: none;
     width: 15%;
     height: 100vh;
     transition: transform .5s ease;
