--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <img class="Background" src="./../../assets/fondo.PNG" alt="">
+<div class="Modal-status" id="modalView">
+    <div class="Modal">
+        <h2>Este es el estado del servidor</h2>
+        <p id="status" class="unknow">{{stat}}</p>
+    </div>
+</div>
 <div class="SideBar" id="SideBar">
     <div class="Logotype-button">
         <div class="Logotype">
