--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -117,6 +117,11 @@ a:link, a:hover, a:visited, a:active, a{
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 90000;
+    width: 100%;
+    height: 100%;
+}
+.Modal-status h2{
+    color: var(--c1);
 }
 .Modal{
     display: flex;
@@ -124,7 +129,9 @@ a:link, a:hover, a:visited, a:active, a{
     align-items: center;
     flex-direction: column;
     width: 500px;
-    height: 350px;
+    height: 200px;
+    border-radius: 10px;
+    background-color: var(--sw);
     padding: 20px 50px;
     border-right:5px solid var(--c2);
     border-left:5px solid var(--c2);
