add modal status

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <img class="Background" src="./../../assets/fondo.PNG" alt="">
 <div class="Modal-status" id="modalView">
     <div class="Modal">
-        <h2>Este es el estado del servidor</h2>
+        <h2>Servidor</h2>
+        <p>El servidor al ser hosteado en una pagina gratuita tiene un tiempo de espera de 1 minuto para inicar</p>
         <p id="status" class="unknow">{{stat}}</p>
     </div>
 </div>
