--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -120,8 +120,11 @@ a:link, a:hover, a:visited, a:active, a{
     width: 100%;
     height: 100%;
 }
-.Modal-status h2{
+.Modal h2{
     color: var(--c1);
+}
+.Modal p{
+    text-align: center;
 }
 .Modal{
     display: flex;
