--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="Modal-status" id="modalView">
     <div class="Modal">
         <h2>Servidor</h2>
-        <p>El servidor al ser hosteado en una pagina gratuita tiene un tiempo de espera de 1 minuto para inicar</p>
+        <p>El servidor al ser hosteado en una pagina gratuita tiene un tiempo de espera de 1 minuto para inicar, el estado del servidor es:</p>
         <p id="status" class="unknow">{{stat}}</p>
     </div>
 </div>
