--- a/src/app/post-view/post-view.component.html
+++ b/src/app/post-view/post-view.component.html
@@ -10,13 +10,13 @@
     </style>
 <div class="containerPost">
     <div class="imgPost">
-        <img src="https://polinet.onrender.com/public/images/{{post.image}}" alt="">
+        <img src="https://storage.googleapis.com/images-polinet.appspot.com/images/{{post.image}}" alt="">
     </div>
     <div class="bodyPost">
         <div class="body">
             <div  class="Photo-perfil">
                 <div>
-                    <img src="https://polinet.onrender.com/public/images/{{post.creator_image}}" alt="">
+                    <img src="https://storage.googleapis.com/images-polinet.appspot.com/images/{{post.creator_image}}" alt="">
                 </div>
                 <a href="/#/Profile/{{post.creator_id}}">{{post.creator_name}}</a>
             </div>
@@ -41,7 +41,7 @@
                     <div class="userComment" *ngFor="let comment of BoxComments">
                         <div class="Photo-perfil">
                             <div>
-                                <img src="https://polinet.onrender.com/public/images/{{comment.image}}" alt="">
+                                <img src="https://storage.googleapis.com/images-polinet.appspot.com/images/{{comment.image}}" alt="">
                             </div>
                             <a href="/#/Profile/{{comment._id}}">{{comment.name}}</a>
                         </div>
