--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -68,8 +68,7 @@
     cursor: pointer;
 }
 .iconPerfil img, .iconMeeting img, .iconConfig img, .iconHome img{
-    width: 100%;
-    height: 100%;
+    width: 35px;
   
 }
 
