--- a/src/app/make-post/make-post.component.html
+++ b/src/app/make-post/make-post.component.html
@@ -15,7 +15,7 @@
             <textarea formControlName="description" type="text" rows="4" cols="50" maxlength="600" spellcheck="true" placeholder="Escribe una descripción para tu post"></textarea>
         </div>
         <div class="ButtonSend">
-            <button [disabled]="!formMakePost.valid">Publicar</button>
+            <button [disabled]="!formMakePost">Publicar</button>
         </div>
     </form>
 </div>
